Atualizações de layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,7 +304,7 @@ h5.subtitle {
 }
 
 .gr-overlay {
-  background: linear-gradient(135deg, #2f1ce0 0%, #53a0fd 30%, #51eca5 100%);
+  background: linear-gradient(135deg, #1c50e0 0%, #53a0fd 30%, #51eca5 100%);
   opacity: 0.80;
 }
 
