--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -180,3 +180,13 @@ select::-ms-expand {
 .select:hover::after {
   color: #23b499;
 }
+
+.form2{
+  width: 100%;
+  height: 50px;    
+  padding-left: 5px;
+  box-sizing: border-box;
+  font-size: 20px;
+  font-family: fantasy;
+  cursor:pointer;
+  }
