--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -7,7 +7,7 @@ main {
     border-radius: 10px;
 
     min-width: 320px;
-    max-width: 800px;
+    max-width: 950px;
     margin: 70 auto;
   }
   #abertura {
@@ -182,3 +182,35 @@ select::-ms-expand {
   font-size: 20px;
   cursor:pointer;
   }
+
+  .bol1{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(0, 17, 255);
+    display: inline-block;
+    border: 5px solid #000000;
+    border-radius: 50%;
+  }
+.bol2{
+  width: 300px;
+  height: 300px;
+  background-color: rgb(246, 255, 0);
+  display: inline-block;
+  border: 5px solid #000000;
+  border-radius: 50%;
+}
+.bol3{
+  width: 300px;
+  height: 300px;
+  background-color: rgb(255, 166, 0);
+  display: inline-block;
+  border: 5px solid #000000;
+  border-radius: 50%;
+}
+
+#textt3{
+  text-align:center;
+  font-size: 35px;
+  color:#000000;
+  margin: auto;
+}
