--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -97,7 +97,7 @@ main {
   width: 18px;
   height: 18px;
   border-radius: 50%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border: 1px solid gray;
   display: inline-block;
   vertical-align: middle;
@@ -257,3 +257,9 @@ img{
   color:#000000;
   margin-top: auto;
 }
+
+/* style all elements with a required attribute 
+:required {
+  background: red;
+}
+*/
