--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,8 +1,8 @@
 body{
-    background-color:rgb(255, 255, 255);
+  background-image: linear-gradient(135deg, #1c50e0 0%, #53a0fd 30%, #51eca5 100%);
+
 }
 main {
-    background-color: #81bdbe;
     padding:10px;
     border-radius: 10px;
 
@@ -11,7 +11,6 @@ main {
     margin: 70 auto;
   }
   #abertura {
-    background-color: #81bdbe;
     padding:10px;
     border-radius: 10px;
 
@@ -60,7 +59,7 @@ main {
 
   .half-box{
     text-align:center;
-    margin: 20;
+    margin: 1;
     font-size: 30px;
     padding: 20;
     box-sizing: border-box;
@@ -80,7 +79,6 @@ main {
 }
 
 .main-main {
-  background-color: #81bdbe;
   padding:10px;
   border-radius: 10px;
 
@@ -253,20 +251,30 @@ img{
 }
 
 #textt7{
+  font-size: 40px;
+  color:#000000;
+  margin-top: auto;
+}
+#textt8{
   font-size: 25px;
   color:#000000;
   margin-top: auto;
 }
 
+#textt77{
+  font-size: 30px;
+  color:#000000;
+  margin-top: auto;
+}
+
 .mainagr{
-  
-    background-color: #ffffff;
+    text-align:center;
     padding:10px;
     border-radius: 10px;
-
+    font-family:fantasy;
     min-width: 320px;
     max-width: 950px;
-    margin: 70 auto;
+    margin: 210 auto;
 
 }
 
