--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -252,7 +252,7 @@ img{
 
 #textt7{
   font-size: 40px;
-  color:#000000;
+  color:#ffffff;
   margin-top: auto;
 }
 #textt8{
@@ -263,7 +263,7 @@ img{
 
 #textt77{
   font-size: 30px;
-  color:#000000;
+  color:#ffffff;
   margin-top: auto;
 }
 
